tests/snapshots/lib__snapshots__legacy@parse_spec_valid_filter.env_filter.snap
---
source: tests/snapshots.rs
expression: "crate1::mod1=error,crate1::mod2,crate2=debug/abc"
---
crate1::mod2=trace,crate1::mod1=error

1 directives were ignored as invalid

  ⚠ invalid level filter specified
   ╭────
 1 │ crate1::mod1=error,crate1::mod2,crate2=debug/abc
   ·                                        ─────────
   ╰────
  help: valid level filters are OFF, ERROR, WARN, INFO, DEBUG, or TRACE


