tests/snapshots/lib__snapshots__legacy_filter@levels.env_filter.snap
---
source: tests/snapshots.rs
expression: "off,error,warn,info,debug,trace"
---
Filter {
    scope: ThreadLocal { local_data: None },
    statics: DirectiveSet {
        directives: SortedSet {
            set: SortedVec {
                vec: [
                    StaticDirective {
                        target: None,
                        fields: [],
                        level: LevelFilter::TRACE,
                    },
                ],
            },
        },
        level: LevelFilter::TRACE,
    },
    dynamics: DirectiveSet {
        directives: SortedSet {
            set: SortedVec {
                vec: [],
            },
        },
        level: LevelFilter::OFF,
    },
    by_id: RwLock {
        data: {},
        poisoned: false,
        ..
    },
    by_cs: RwLock {
        data: {},
        poisoned: false,
        ..
    },
}
